--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+body {
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
