--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,17 @@
 /* Footer.css */
 .footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #333;
-    color: white;
-    animation: fadeInUp 1s ease;
-  }
-  
-  /* Reusing fadeInUp animation from Header.css */
-  
+  text-align: center; 
+  background-color: #333;
+  color: white;
+  animation: fadeInUp 1s ease;
+
+  height: 71px; /**footer height*/ 
+  float: bottom;
+} 
+
+.footer p {
+  margin: 0;
+  padding: 0;
+}
+
+/* Reusing fadeInUp animation from Header.css */
