--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,6 +8,7 @@
   float: right;
   text-align: right;
   padding-right: 20px;
+  line-height: 20px;
 }
 .leftSide {
   width: 50px; 
@@ -41,15 +42,6 @@
   text-align: left;
   padding-left:20px;
 }
-.footer-blocker { 
-  width: 1353px; /**based on partitionB*/
-  height: 100%;
-  display: block; 
-   /*Hide unhide later - sonny**/
-  /* background-color: rgb(0, 0, 0);  */
-  margin-left:23px;
-  float: left;
-}
 .footer { 
   margin-top:-71px;
   animation: fadeInUp 1s ease; 
@@ -64,5 +56,4 @@
   margin: 0;
   padding: 0;
 }
-
-/* Reusing fadeInUp animation from Header.css */
+ 
