--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,68 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 .App { 
   background-image: url(img/bg.png);
+}
+
+/* ####################
+Controllers
+#################### */
+.Meida-Controller {
+  height: 100%;
+  font-weight: 100%;
+  position: absolute;
+  z-index: 9999;
+  left:260px;
+}
+.Header-Controller {
+  height: 100%;
+  font-weight: 100%;
+  position: absolute;
+  z-index: 88;
+  right: 0;
+}
+.Patient-Controller {
+  height: 100%;
+  font-weight: 100%;
+  position: absolute;
+  z-index: 88;
+  left: 0;
+  top: 710px;
+}
+.Precaution-Controller {
+  height: 100%;
+  font-weight: 100%;
+  position: absolute;
+  z-index: 88;
+  right: 0;
+  top: 260px;
+}
+.Mobility-Controller {
+  height: 100%;
+  font-weight: 100%;
+  position: absolute;
+  z-index: 88;
+  right: 0;
+  top: 650px;
+}
+.Patientcare-Controller {
+  height: 100%;
+  font-weight: 100%;
+  position: absolute;
+  z-index: 88;
+  right: 0;
+  top: 835px;
 }
