--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,27 +1,21 @@
-/* Footer.css */
-.rigthSide h3 {
-  font-size: 27px;
-}
-.rigthSide {
-  width: 430px;  
-  display: block;
-  float: right;
-  text-align: right;
-  padding-right: 20px;
-  line-height: 20px;
-}
+/* Footer.css */  
 .leftSide {
-  width: 50px; 
-  display: block;
-  float: left;
+  display: inline-flex; 
 }
-.StatusPoint span {
-  font-size: 12px;
-  color: white;
-}
+.rigthSide { 
+  display: inline-flex; 
+  line-height: 20px;
+  font-size: 1.2vw;
+  margin-left: 90px;
+} 
+.rigthSide h3 {
+  text-align: right;
+}  
 .circle {
-  width: 35px;
-  height: 35px;
+  /* width: 35px;
+  height: 35px; */
+  width: 1.8vw;
+  height: 1.8vw;
   border: 1px solid gray;
   background-color: #00af49; /* Replace desired background color */
   border-radius: 50%;
@@ -29,31 +23,32 @@
   align-items: center;
   justify-content: center;
   color: white; /* Text color */
-  font-size: 18px; /* Text size */
+  /* Text size */
+  /* font-size: 18px;  */
+  font-size: 1.3vw; /* Text size */
 }
 .footer-left-content {
-  color: black; 
-  width: 525px; /**based on partitionA*/  
-  display: block;
-  /*Hide unhide later - sonny**/
-  /* background-color: red;   */
-  height: 100%;
-  float: left;
-  text-align: left;
-  padding-left:20px;
-}
-.footer { 
-  margin-top:-71px;
-  animation: fadeInUp 1s ease; 
-  height: 71px; /**footer height*/ 
-  float: bottom;
+  color: black;
+  /**based on partitionA*/ 
+  /* width: 525px;  */  
   position: absolute;
-  z-index: 1;  
-  width: 1980px; /**fixed width*/
+  clear: both;
+  height: 100%; 
+  padding-left: 20px;
 } 
+.footer {
+  margin-top: -71px;
+  animation: fadeInUp 1s ease;
+  height: 71px; /**footer height*/  
+  position: relative;
+  display: flex; 
+  z-index: 1;
+  left:0; 
+  /**fixed width*/
+  /* width: 1980px;  */ 
+}
 
 .footer p {
   margin: 0;
   padding: 0;
 }
- 
