--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,50 +1,77 @@
 /* Header.css */
-.header-this-icon .header-icon-view {
-  width: 100%;
+.header {
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
+}
+
+.header-this-icon .header-icon-view img {
+  width: 8.5vw;
+  height: auto;
+  display: block;
+  margin-top: 50px;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 .header-this-icon {
-  padding-left: 2px;
-  padding-right: 2px;
-  width: 165px;
-  height: 165px; 
+  /* width: 165px; */
+  max-width: 165px;
+  min-width: 140px;
+  /* height: 165px; */
+  max-height: 165px;
+  min-height: 140px;
   float: right;
 }
 .header-icons {
+  /**change later - so*/
   /* background-color: blue; */
   padding-left: 10px;
   padding-right: 10px;
-  width: 665px; /**-20px = 675*/
+  /**-20px = 675*/
+  /* width: 665px; */
   height: 100%;
   float: right;
 }
+
 .header-name .header-patient-name {
   /* background-color: red;  */
   height: 140px;
 }
 .header-name .header-patient-location {
-  font-size: 45px;
+  /* font-size: 45px; */
+  font-size: 2vw;
   font-weight: 500;
   text-align: left;
 }
 .header-name .header-patient-name {
-  font-size: 70px;
+  /* font-size: 70px; */
+  font-size: 3.5vw;
   font-weight: 400;
   text-align: left;
 }
+.header-container::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .header-name {
+  /**change later - so*/
   /* background-color: red; */
   float: left;
   padding-left: 20px;
-  width: 955px; /**-20p = 955*/
+  /**-20p = 955*/
+  /* width: 955px;  */
   height: 100%;
-  display: block;
+  max-width: 955px;
+  /* display: block; */
+  /* background-color: blue; */
 }
 .header-bed-content .bed-title {
-  font-size: 30px;
+  font-size: 4vh;
   font-weight: 500;
 }
 .header-bed-content .bed-number {
-  font-size: 105px;
+  /* font-size: 105px; */
+  font-size: 11vh;
   font-weight: 800;
   margin-top: -25px;
 }
@@ -62,21 +89,24 @@
   color: white;
 }
 .header-content-mid2 {
+  /**change later - so*/
   display: flex;
   height: 100%;
-  align-items: center;  
+  align-items: center;
 }
 .header-content-mid {
   display: flex;
-  justify-content: center;  
-  align-items: center;  
+  justify-content: center;
+  align-items: center;
 }
 .header {
   /**change later - so*/
-  /* background-color: gray; */
   color: black;
   animation: fadeInUp 1s ease;
   height: 214px;
+  min-height: 214px;
+  display: block;
+  /* background-color: red; */
 }
 .header h1 {
   margin: 0;
