--- a/src/components/Media/MediaSection.css
+++ b/src/components/Media/MediaSection.css
@@ -1,5 +1,5 @@
 .fullmedia-content {
-  color:white;
+  color: white;
   font-weight: 700;
   font-size: 20px;
   display: flex;
@@ -9,22 +9,22 @@
   height: 100%;
 }
 .media-content {
-  color:white;
-  font-weight: 700;
-  font-size: 20px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 100vh; /* Set the height to 100% of the viewport height */
+  color: white;
+  font-weight: 700;
+  font-size: 1.3vh;
   width: 100%;
-  height: 800px;
 }
-.fullmedia-section { 
+.fullmedia-section {
   position: absolute;
   animation: fadeIn 1s ease;
   background-color: black;
   height: 100%;
   width: 100%;
-  z-index: 999; 
+  z-index: 999;
 }
 
 .media-section {
@@ -35,7 +35,7 @@
   width: 1920px;
   z-index: 999;
   margin-top: 215px;
-}  
+}
 .footer-blocker {
   position: absolute;
   right: 0;
@@ -44,13 +44,14 @@
   height: 65px;
   background-color: #efeeed;
 }
+
 .footer-blocker2 {
-  position: absolute; 
+  position: absolute;
   left: 0;
   width: 100%;
   height: 65px;
   background-color: black;
-} 
+}
 @keyframes fadeIn {
   from {
     opacity: 0;
