--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,19 @@ code {
     monospace;
 }
 
-.App { 
+/* .App {
   background-image: url(img/bg.png);
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+} */
+
+html {
+  background: url(img/bg.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* ####################
@@ -25,14 +36,14 @@ Controllers
   font-weight: 100%;
   position: absolute;
   z-index: 9999;
-  left:260px;
+  left: 260px;
 }
 .Header-Controller {
   height: 100%;
   font-weight: 100%;
   position: absolute;
   z-index: 88;
-  right: 0;
+  right: 50px;
 }
 .Patient-Controller {
   height: 100%;
@@ -47,7 +58,7 @@ Controllers
   font-weight: 100%;
   position: absolute;
   z-index: 88;
-  right: 0;
+  right: 50px;
   top: 260px;
 }
 .Mobility-Controller {
@@ -55,14 +66,14 @@ Controllers
   font-weight: 100%;
   position: absolute;
   z-index: 88;
-  right: 0;
-  top: 650px;
+  right: 50px;
+  top: 640px;
 }
 .Patientcare-Controller {
   height: 100%;
   font-weight: 100%;
   position: absolute;
   z-index: 88;
-  right: 0;
-  top: 835px;
+  right: 50px;
+  top: 800px;
 }
